@@ -2,7 +2,8 @@
 
 Migrationsdir = @DATADIR@/ebox-ebackup/migration
 
-nobase_Migrations_SCRIPTS = 0001_add_default_excludes.pl 0002_changed_remote_options.pl
+nobase_Migrations_SCRIPTS = 0001_add_default_excludes.pl 0002_changed_remote_options.pl \
+			    0003_delete_ebox_crontab.pl
 
 EXTRA_DIST = $(nobase_Migrations_SCRIPTS)
 
